--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
@@ -19,6 +20,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-load-script": "^0.0.6",
     "react-loader-spinner": "^5.3.4",
